--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,187 @@ body {
     text-decoration: underline;
 
 }
+
+.main-container{
+    margin-left: 350px;
+    margin-bottom: 100px;
+}
+
+.topbar{
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
+    padding: 14px 30px;
+}
+
+.topbar .prev-next-buttons button{
+    color: rgb(207, 196, 181);
+    cursor: not-allowed;
+    width: 34px;
+    height: 34px;
+    border-radius: 10px;
+    font-size: 18px;
+    border: 0px;
+    background-color: black;
+    margin-right: 10px;
+
+}
+
+.topbar .navbar{
+    display: flex;
+    align-items: center;
+}
+
+.topbar .navbar ul{
+    list-style: none;
+
+}
+
+.topbar .navbar ul li{
+    display: inline-block;
+    margin: 0px 8px;
+    width: 70px;
+}
+
+.topbar .navbar ul li a{
+    color: #b3b3b3;
+    text-decoration: none;
+    font-weight: bolder;
+    font-size: 14px;
+    letter-spacing: 1px;
+}
+
+.topbar .navbar ul li a:hover{
+    color: white;
+    font-size: 13;
+}
+
+.topbar .navbar button{
+    background-color: azure;
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 14px 30px;
+    border: 0px;
+    border-radius: 40px;
+    cursor: pointer;
+    margin-left: 20px;
+}
+
+.topbar .navbar button:hover{
+    background-color: rgb(204, 212, 212);
+    
+}
+
+.spotify-playlists{
+    padding: 20px;
+}
+
+.spotify-playlists h2{
+    color: white;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.spotify-playlists .list{
+    display: flex;
+    gap: 20px;
+    overflow: hidden;
+}
+.spotify-playlists .list .item{
+    min-width: 140px;
+    width: 140px;
+    padding: 15px;
+    background-color: #181818;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all ease 0.2s;
+}
+
+.spotify-playlists .list .item:hover{
+    background-color: #252525;
+}
+
+
+.spotify-playlists .list .item img{
+    width: 100%;
+    border-radius: 6px;
+    margin-bottom: 10px;
+
+}
+ 
+.spotify-playlists .list .item .play{
+    position: relative;
+}
+
+.spotify-playlists .list .item .play .fa{
+    position: absolute;
+    right: 10px;
+    top: -60px;
+    padding: 10px;
+    background-color: green;
+    border-radius: 100%;
+    opacity: 0;
+    transition: all ease 0.2s;
+}
+
+.spotify-playlists .list .item:hover .play .fa{
+    opacity: 1;
+    transform: translateY(-20px);
+}
+
+.spotify-playlists .list .item h4{
+    color: white;
+    font-size: 14px;
+    margin-bottom: 10px;
+    font-weight: 600;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+}
+
+.spotify-playlists .list .item p{
+    color: #989898;
+    font-size: 12px;
+    line-height: 20px;
+    font-weight: 500;
+}
+
+.preview{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to right,#ae2896, #509bf5);
+    padding: 15px 40px;
+    display: flex;
+    justify-content: space-between;
+
+}
+ .preview h6{
+    color: white;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 12px;
+    margin-bottom: 10px;
+
+ }
+
+ .preview p{
+    color: white;
+    font-size: 14px;
+    font-weight: 500;
+ }
+
+ .preview button{
+    background-color: white;
+    color: #000000;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 14px 30px;
+    border: 0px;
+    border-radius: 40px;
+    cursor: pointer;
+ }
+  
